--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,18 +37,16 @@
     <string name="date_time_span_minutes">%1$s分钟以前</string>
     <string name="date_time_span_hours">%1$s小时以前</string>
     <string name="date_time_span_days">%1$s天以前</string>
-    <string name="title_activity_login">Sign in</string>
 
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <!-- login -->
+    <string name="title_login">Login</string>
+    <string name="prompt_account">Account</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="prompt_login_success">Login Success!</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="error_invalid_account">This account is invalid</string>
+    <string name="error_invalid_password">This password is invalid</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
 
 
 </resources>
