encapsulate moxie api to parse some orders info.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="error_invalid_password">This password is invalid</string>
     <string name="error_field_required">This field is required</string>
 
+    <!-- moxie -->
+    <string name="moxie_agreement_entry_text">同意数据获取协议</string>
 
 </resources>
