encapsulate moxie api to parse some orders info.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
 
     <!-- moxie -->
     <string name="moxie_agreement_entry_text">同意数据获取协议</string>
+    <string name="moxie_title_import_result">导入结果</string>
 
 </resources>
