--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="dpiValue">defaultdpi</string>
     <string name="screenValue">unknow</string>
 
-
+    <!-- date format -->
     <string name="date_format_timestamp_en">yyyy-MM-dd HH:mm:ss</string>
     <string name="date_format_timestamp_cn">yyyy年MM月dd日  HH:mm:ss</string>
     <string name="date_week_bunch">,天,一,二,三,四,五,六</string>
@@ -37,6 +37,9 @@
     <string name="date_time_span_minutes">%1$s分钟以前</string>
     <string name="date_time_span_hours">%1$s小时以前</string>
     <string name="date_time_span_days">%1$s天以前</string>
+
+    <!-- list load -->
+    <string name="list_load_more_tip">加载中&#8230;</string>
 
     <!-- login -->
     <string name="title_login">Login</string>
